manifests/deployment-feature-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-feature-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feature-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: feature-service
    spec:
      containers:
        - image: orobtsovv/feature-service
          name: feature-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /feature-service/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /feature-service/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
