manifests/service-base-app.yml
apiVersion: v1
kind: Service
metadata:
  name: base-app
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: base-app
  type: ClusterIP
