manifests/service-feature-service.yml
apiVersion: v1
kind: Service
metadata:
  name: feature-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: feature-service
  type: ClusterIP
