manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  tls:
    - hosts:
        - example.local
      secretName: tls-secret
  rules:
    - host: example.local
      http:
        paths:
          - path: /base-app
            pathType: Prefix
            backend:
              service:
                name: base-app
                port:
                  number: 80
          - path: /feature-service
            pathType: Prefix
            backend:
              service:
                name: feature-service
                port:
                  number: 80
